# open-irish-annotator

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  RESEARCH.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
examples/: node_analyze.mjs  onnx_analyze.py
examples/golang/: Dockerfile  main.go  vendor_prep.sh
examples/nodejs/: analyze.mjs  package.json
examples/python/: analyze.py
examples/rust/: Cargo.toml
examples/rust/morphology_runtime/: Cargo.toml
examples/rust/morphology_runtime/resources/: char_vocab.json  tagset.json  word_vocab.json
examples/rust/morphology_runtime/src/: api.rs
examples/rust/src/: main.rs
release_artifacts/0.1.1/: gaeilge-morph-0.1.1.tar.gz.sha256
rust/morphology_runtime/: Cargo.toml
rust/morphology_runtime/resources/: lemma_lexicon.json
rust/morphology_runtime/src/: api.rs
scripts/: analyze_metrics.py  build_lemma_lexicon.py  build_mechura_lexicon.py  build_splits.py  build_tagset.py  build_teacher_stanza.py  check_split_leakage.py  download_ud_irish.sh  onnx_parity.py  package_release.sh
src/gaeilge_morph/data/: __init__.py  dataset.py
src/gaeilge_morph/eval/: __init__.py  evaluate.py
src/gaeilge_morph/export/: __init__.py  export_onnx.py
src/gaeilge_morph/models/: components.py  model.py
src/gaeilge_morph/training/: __init__.py  runner.py  train.py
