[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaeilge-morph"
version = "0.1.0"
description = "Irish morphology model training and ONNX export"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Open Irish Annotator" }
]
dependencies = [
  "numpy>=1.24,<2.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "hydra-core>=1.3",
  "scikit-learn>=1.3",
  "conllu>=4.5",
  "torch>=2.2; platform_system != 'Darwin' or platform_machine != 'arm64'",
  # For Apple Silicon, install PyTorch per official instructions if needed
  "onnx>=1.15",
  "onnxruntime>=1.18",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.8",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
include = ["gaeilge_morph*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true


