[package]
name = "morphology_runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "morphology_runtime"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ndarray = { version = "0.15", optional = true }
tract-onnx = { version = "0.21", optional = true }

[features]
default = []
inference = ["tract-onnx", "ndarray"]


